--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <!-----Insert here-->
 
             <div class="cars-row row">
-                <div class="cars-column col-3">
+                <div class="cars-column col-lg-3 col-sm-12">
                     <div class="card-cars card mx-auto">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
@@ -361,7 +361,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cars-column col-3">
+                <div class="cars-column col-lg-3 col-sm-12">
                     <div class="card-cars card mx-auto">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
@@ -401,7 +401,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cars-column col-3">
+                <div class="cars-column col-lg-3 col-sm-12">
                     <div class="card-cars card mx-auto">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
@@ -441,7 +441,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cars-column col-3">
+                <div class="cars-column col-lg-3 col-sm-12">
                     <div class="card-cars card mx-auto">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
@@ -481,7 +481,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cars-column col-3">
+                <div class="cars-column col-lg-3 col-sm-12">
                     <div class="card-cars card mx-auto">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
@@ -521,7 +521,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cars-column col-3">
+                <div class="cars-column col-lg-3 col-sm-12">
                     <div class="card-cars card mx-auto">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
@@ -561,7 +561,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cars-column col-3">
+                <div class="cars-column col-lg-3 col-sm-12">
                     <div class="card-cars card mx-auto">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
@@ -601,7 +601,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cars-column col-3">
+                <div class="cars-column col-lg-3 col-sm-12">
                     <div class="card-cars card mx-auto">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
