--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="item-box row">
 
         <div class="left-box col-lg-2 col-md-2 container-fluid">
-
+            <div class="card container-fluid">
             <div class="finance-btn btn-group container-fluid">
                 <a href="#" class="finance-option-btn btn btn-primary">Financing</a>
                 <a href="#" class="finance-option-btn btn btn-primary">Cash</a>
@@ -301,7 +301,7 @@
                     </div>
                 </div>
             </div>
-
+        </div>
         </div>
 
 
@@ -322,7 +322,7 @@
 
             <div class="cars-row row">
                 <div class="cars-column col-lg-3 col-sm-12">
-                    <div class="card-cars card mx-auto">
+                    <div class="card-cars card mx-auto shadow">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
                         </div>
@@ -362,7 +362,7 @@
                     </div>
                 </div>
                 <div class="cars-column col-lg-3 col-sm-12">
-                    <div class="card-cars card mx-auto">
+                    <div class="card-cars card mx-auto shadow">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
                         </div>
@@ -402,7 +402,7 @@
                     </div>
                 </div>
                 <div class="cars-column col-lg-3 col-sm-12">
-                    <div class="card-cars card mx-auto">
+                    <div class="card-cars card mx-auto shadow">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
                         </div>
@@ -442,7 +442,7 @@
                     </div>
                 </div>
                 <div class="cars-column col-lg-3 col-sm-12">
-                    <div class="card-cars card mx-auto">
+                    <div class="card-cars card mx-auto shadow">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
                         </div>
@@ -482,7 +482,7 @@
                     </div>
                 </div>
                 <div class="cars-column col-lg-3 col-sm-12">
-                    <div class="card-cars card mx-auto">
+                    <div class="card-cars card mx-auto shadow">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
                         </div>
@@ -522,7 +522,7 @@
                     </div>
                 </div>
                 <div class="cars-column col-lg-3 col-sm-12">
-                    <div class="card-cars card mx-auto">
+                    <div class="card-cars card mx-auto shadow">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
                         </div>
@@ -562,7 +562,7 @@
                     </div>
                 </div>
                 <div class="cars-column col-lg-3 col-sm-12">
-                    <div class="card-cars card mx-auto">
+                    <div class="card-cars card mx-auto shadow">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
                         </div>
@@ -602,7 +602,7 @@
                     </div>
                 </div>
                 <div class="cars-column col-lg-3 col-sm-12">
-                    <div class="card-cars card mx-auto">
+                    <div class="card-cars card mx-auto shadow">
                         <div class="card-header">
                             <h5>2018 Toyota Rav4</h5>
                         </div>
