--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="item-box row">
 
         <div class="left-box col-lg-2 col-md-2 container-fluid">
-            <div class="card container-fluid">
+            <div class="card container-fluid shadow">
             <div class="finance-btn btn-group container-fluid">
                 <a href="#" class="finance-option-btn btn btn-primary">Financing</a>
                 <a href="#" class="finance-option-btn btn btn-primary">Cash</a>
